<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- EN -->
    <!-- Main activity -->
    <string name="app_name">ReviB CPR</string>
    <string name="main_question">Are you in a real emergency or would you like to train CPR?</string>
    <string name="real_cpr">Real emergency</string>
    <string name="practice_cpr">Train CPR</string>
    
    <!-- Audio Dialog -->
    <string name="audio_dialog_title">Sound is disabled.</string>
    <string name="audio_dialog_message">your audio is disabled.
    If you want to hear the instructions, please raise the volume.</string>

    <!-- Settings activity -->
    <string name="settings">Settings</string>
    <string name="language">Language:</string>

    <string-array name="language_list">
        <item>English</item>
        <item>Español</item>
        <item>Euskara</item>
    </string-array>
    <string-array name="language_code_list">
        <item>en</item>
        <item>es</item>
        <item>eu</item>
    </string-array>

    <!-- About Activity -->
    <string name="about_revib">About ReviB</string>
    <string name="about_logo_description">ReviB logo</string>
    <string name="about_version">ReviB v0.1</string>
    <string name="about_copyright">©2013 Alain Perez</string>
    <string name="about_code_license">        All ReviB code is licensed by
        Alain Perez under the GNU General
        Public License (2.0).</string>
    <string name="about_artwork_license">        All ReviB artwork is licensed by
        Ines Fernandez under the Creative Commons
        Attribution-NonCommercial-ShareAlike 3.0
        Unported License.</string>
    <string name="about_warning">This program is
        distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY.</string>

    <!-- Age activity -->
    <string name="title_activity_age">The age of the victim</string>
    <string name="age_question">How old is the victim?</string>
    <string name="age_adult">Adult (more than 8 years old)</string>
    <string name="age_child">Child (between 1 and 8 years old)</string>
    <string name="age_baby">Baby (less than 12 months old)</string>
    <string name="title_activity_cons_check">Check Consciousness</string>
	
	<!-- Other -->
    <string name="state_view">Step descriptions</string>
    <string name="state_image_description">State image</string>
    <string name="state_view_description">View help for state</string>
    <string name="state_reload_description">Reload the state</string>
    <string name="state_audio_description">Audio is disabled</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question">Question?</string>
    <string name="dialog_info">What to do</string>
    <string name="dialog_ok">OK</string>
    <string name="false_phone_call">In a real emergency a dial will appear with the emergency phone number.</string>
</resources>