<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/revib_pattern_bm"
    tools:context=".AboutActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
	    
	    <ImageView
	        android:id="@+id/revib_logo_iv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/about_logo_description"
	        android:src="@drawable/revib_logo" />


	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/"
	        android:gravity="center_horizontal"
	        android:orientation="vertical" >
	
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:paddingTop="9dp"
	            android:text="@string/about_version"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@android:color/secondary_text_dark" />
	
	        <TextView
	            android:id="@+id/about_copyright_tv"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:text="@string/about_copyright"
	            android:textAppearance="?android:attr/textAppearanceMedium"
        		android:textColor="@android:color/secondary_text_dark"  />
	
			<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:layout_margin="14dp"
			    android:background="#777777" />
	
	        <TextView
	            android:id="@+id/about_code_license_tv"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="7dp"
	            android:layout_marginRight="7dp"
	            android:gravity="center_horizontal"
	            android:paddingBottom="5dp"
	            android:text="@string/about_code_license"
	            android:textAppearance="?android:attr/textAppearanceMedium"
      		  	android:textColor="@android:color/secondary_text_dark" />
	
	        <TextView
	            android:id="@+id/about_artwork_license_tv"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="7dp"
	            android:layout_marginRight="7dp"
	            android:gravity="center_horizontal"
	            android:paddingRight="5dp"
	            android:text="@string/about_artwork_license"
	            android:textAppearance="?android:attr/textAppearanceMedium"
        		android:textColor="@android:color/secondary_text_dark"  />
	        
			<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:layout_margin="14dp"
			    android:background="#777777" />
	
	        <TextView
	            android:id="@+id/about_warning"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="5dp"
	            android:drawableBottom="@drawable/warning"
	            android:drawableTop="@drawable/warning"
	            android:gravity="center_horizontal"
	            android:paddingRight="9dp"
	            android:text="@string/about_warning"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textColor="@android:color/secondary_text_dark" />
	        
	    </LinearLayout>
	</LinearLayout>
</ScrollView>