<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#b2c0c3"
    tools:context=".AboutActivity"
    android:id="@+id/about_root">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
	    
	    <ImageView
	        android:id="@+id/revib_logo_iv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/about_logo_description"
	        android:src="@drawable/revib_logo" />


	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/gallery_negative"
	        android:gravity="center_horizontal"
	        android:orientation="vertical" >
	
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:paddingTop="9dp"
	            android:text="@string/about_version"
	            android:textAppearance="?android:attr/textAppearanceMedium"/>
	
	        <TextView
	            android:id="@+id/about_copyright_tv"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:text="@string/about_copyright"
	            android:textAppearance="?android:attr/textAppearanceMedium"/>
	
			<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:layout_margin="14dp"
			    android:background="#111111" />
	
	        <TextView
	            android:id="@+id/about_code_license_tv"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="7dp"
	            android:layout_marginRight="7dp"
	            android:gravity="center_horizontal"
	            android:paddingBottom="5dp"
	            android:text="@string/about_code_license"
	            android:textAppearance="?android:attr/textAppearanceMedium"/>
	
	        <TextView
	            android:id="@+id/about_artwork_license_tv"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="7dp"
	            android:layout_marginRight="7dp"
	            android:gravity="center_horizontal"
	            android:paddingRight="5dp"
	            android:text="@string/about_artwork_license"
	            android:textAppearance="?android:attr/textAppearanceMedium"/>
	
	        <TextView
	            android:id="@+id/about_experts_tv"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal"
	            android:text="@string/about_experts"
	            android:textAppearance="?android:attr/textAppearanceMedium"/>
	        
			<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:layout_margin="14dp"
			    android:background="#111111" />
	
	        <TextView
	            android:id="@+id/about_warning"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="5dp"
	            android:drawableBottom="@drawable/image_warning"
	            android:drawableTop="@drawable/image_warning"
	            android:gravity="center_horizontal"
	            android:paddingRight="9dp"
	            android:text="@string/about_warning"
	            android:textAppearance="?android:attr/textAppearanceLarge"/>
	        
	    </LinearLayout>
	</LinearLayout>
</ScrollView>