<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:gravity="bottom|center_horizontal"
    android:onClick="onStateBtnClicked"
    android:background="@drawable/revib_pattern_bm"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/state_iv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:src="@drawable/warning" />

    <TextView
        android:id="@+id/state_question_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/question"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/state_left_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onStateBtnClicked"
            android:text="@string/no"
            android:background="@drawable/red_button_light" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_grey_btn"
            android:src="@android:drawable/ic_popup_sync" />

        <Button
            android:id="@+id/state_right_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onStateBtnClicked"
            android:text="@string/yes"
            android:background="@drawable/green_button_light" />

    </LinearLayout>

</LinearLayout>